--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6057,3 +6057,8 @@ $color-blankstate-background: rgba($colorTextBody, 0.1);
   line-height: 1.1;
 }
 
+body{
+  background-color:red;
+  font-family : 
+}
+
