changes in Header

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,4 +1,5 @@
 <header class="site-header" role="banner" data-section-id="{{ section.id }}" data-section-type="header-section">
+  <h1 style="color: white;">Hi zeel</h1>
   <div class="wrapper">
 
     <div class="grid--full">
