tab with slider CSS and JS Code

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -32,6 +32,14 @@
   <!-- CSS ================================================== -->
   {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
 
+  {{ 'custom.css' | asset_url | stylesheet_tag }}
+
+  {{ 'flickity.css' | asset_url | stylesheet_tag }}
+
+  {{ 'owl.min.css' | asset_url | stylesheet_tag }}
+
+  
+
   <script>
 
     var moneyFormat = '{{ shop.money_format }}';
@@ -95,10 +103,17 @@
   {% endif %}
 
   {{ 'jquery-2.2.3.min.js' | asset_url | script_tag }}
+  {{ 'custom.js' | asset_url | script_tag }}
+  <!-- {{ 'flickity.min.js' | asset_url | script_tag }} -->
+
+  {{ 'owl.min.js' | asset_url | script_tag }}
+  
 
   <script src="{{ 'lazysizes.min.js' | asset_url }}" async="async"></script>
   <script src="{{ 'vendor.js' | asset_url }}" defer="defer"></script>
   <script src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
+  
+  
 
 
 </head>
@@ -124,6 +139,8 @@
   <ul hidden>
     <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
   </ul>
+
+
 
 
 </body>
