--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,5 +1,8 @@
 <header class="site-header" role="banner" data-section-id="{{ section.id }}" data-section-type="header-section">
-  <h1 style="color: white;">Hi zeel</h1>
+  <div class="wrapper">
+    <h1 class="announcment_bar">Free Shipping with $25 purchase or fast & free Store Pickup.</h1>
+  </div>
+  
   <div class="wrapper">
 
     <div class="grid--full">
