Add to cart Code and final Design done

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -39,6 +39,7 @@
   {{ 'owl.min.css' | asset_url | stylesheet_tag }}
 
   
+  
 
   <script>
 
@@ -140,8 +141,7 @@
     <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
   </ul>
 
-
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </body>
 </html>
